[Content Extensions] Fail to parse invalid arrays https://bugs.webkit.org/show_bug.cgi?id=146079 rdar://problem/21422649

Reviewed by Benjamin Poulain.

Source/WebCore:

Covered by new and corrected API tests.

* contentextensions/ContentExtensionParser.cpp:
(WebCore::ContentExtensions::loadTrigger):
Fail to parse invalid arrays for if-domain, unless-domain, resource-type, and load-type arrays.

Tools:

* TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
(TestWebKitAPI::TEST_F):
Correct and add parsing tests with invalid arrays.



Canonical link: https://commits.webkit.org/164136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185683 268f45cc-cd09-0410-ab3c-d52691b4dbfc